# Task-manager

./: .gitignore  README.md
Client/: CMakeLists.txt  client.cpp  client.h  main.cpp
Server/: CMakeLists.txt  dataset.txt  main.cpp  server.cpp  server.h  server.py
Task_manager/: CMakeLists.txt  Dockerfile  global.h  invitewindow.cpp  invitewindow.h  invitewindow.ui  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  project.cpp  project.h  projectwindow.cpp  projectwindow.h  projectwindow.ui  registrationwindow.cpp  registrationwindow.h  registrationwindow.ui  task.cpp  task.h  taskwindow.cpp  taskwindow.h  taskwindow.ui
ip-create/: CMakeLists.txt  CMakeLists.txt.user.5b690ba  server.cpp
nginx-configs/: central_default  small_default 
python_server/: server.py  server_8082.py  server_less.py  server_less_zaglushka.py  server_zaglushka.py
